# diem-sqlize

./: .gitignore  Cargo.toml  example-queries.sql
src/: annotator.rs  backup.rs  db.rs  dummy.rs  fat_type.rs  main.rs  resolver.rs  state.rs  util.rs
