[package]
name = "diem-sqlize"
version = "0.1.0"
authors = ["Jack Moffitt <metajack@fb.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bcs = "0.1"
hex = "0.4"
serde = "1.0"
sqlx = { version = "0.4", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
url = "2.2"

diem-json-rpc-client = { version = "0.1.0", git = "https://github.com/diem/diem", rev = "453eae5c4a660c53ad34242f45296119485ecb5c" }
diem-state-view = { version = "0.1.0", git = "https://github.com/diem/diem", rev = "453eae5c4a660c53ad34242f45296119485ecb5c" }
diem-types = { version = "0.1.0", git = "https://github.com/diem/diem", rev = "453eae5c4a660c53ad34242f45296119485ecb5c" }
diem-vm = { version = "0.1.0", git = "https://github.com/diem/diem", rev = "453eae5c4a660c53ad34242f45296119485ecb5c" }
move-core-types = { version = "0.1.0", git = "https://github.com/diem/diem", rev = "453eae5c4a660c53ad34242f45296119485ecb5c" }
move-vm-runtime = { version = "0.1.0", git = "https://github.com/diem/diem", rev = "453eae5c4a660c53ad34242f45296119485ecb5c" }
resource-viewer = { version = "0.1.0", git = "https://github.com/diem/diem", rev = "453eae5c4a660c53ad34242f45296119485ecb5c" }
vm = { version = "0.1.0", git = "https://github.com/diem/diem", rev = "453eae5c4a660c53ad34242f45296119485ecb5c" }

[patch."http://github.com/diem/diem"]
diem-json-rpc-client = { path = "../diem/client/json-rpc" }
diem-state-view = { path = "../diem/storage/state-view" }
diem-types = { path = "../diem/types" }
diem-vm = { path = "../diem/language/diem-vm" }
move-core-types = { path = "../diem/language/move-core/types" }
move-vm-runtime = { path = "../diem/language/move-vm/runtime" }
resource-viewer = { path = "../diem/language/tools/resource-viewer" }
vm = { path = "../diem/language/vm" }

[patch.crates-io]
sqlx = { version = "0.4", git = "https://github.com/launchbadge/sqlx", rev = "cdafc8ae172ddccb64b005e1bf9a5447d9d018e5", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }